--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -1,9 +1,42 @@
 version: 0.0
-os: windows
+os: linux
 files:
-  - source: \
-    destination: C:\inetpub\wwwroot
-    file_exists_behavior: OVERWRITE
+  - source: CodeBuild-CoreApplicationForAWS/build_output
+    #destination: /home/ec2-user/aspnetcoreapp
+    destination: /inetpub/wwwroot
+  - source: scripts/virtualhost.conf
+    #destination: /home/ec2-user/aspnetcoreapp
+    destination: /inetpub/wwwroot
+hooks:
+  ApplicationStop:
+    - location: scripts/stop_service
+      timeout: 300
+      runas: root
+
+  BeforeInstall:
+    - location: scripts/remove_application
+      timeout: 300
+      runas: root
+
+  AfterInstall:
+    - location: scripts/install_dotnetcore
+      timeout: 500
+      runas: root
+
+    - location: scripts/install_httpd
+      timeout: 300
+      runas: root
+
+  ApplicationStart:
+    - location: scripts/start_service
+      timeout: 300
+      runas: root
+#version: 0.0
+#os: windows
+#files:
+ # - source: \
+  #  destination: C:\inetpub\wwwroot
+   # file_exists_behavior: OVERWRITE
 #hooks:
  # BeforeInstall:
    # - location: scripts/install_dependencies.sh
