--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -10,26 +10,26 @@ files:
 hooks:
   ApplicationStop:
     #- location: scripts/stop_service
-      timeout: 300
+     # timeout: 300
      # runas: root
 
   BeforeInstall:
     #- location: scripts/remove_application
-      timeout: 300
+     # timeout: 300
      # runas: root
 
   AfterInstall:
     #- location: scripts/install_dotnetcore
-      timeout: 500
+     # timeout: 500
      # runas: root
 
     #- location: scripts/install_httpd
-      timeout: 300
+     # timeout: 300
      # runas: root
 
   ApplicationStart:
     #- location: scripts/start_service
-      timeout: 300
+      #timeout: 300
       #runas: root
 #version: 0.0
 #os: windows
