added file exists behavior

--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -4,6 +4,7 @@ files:
   - source: \build_output\CoreApplicationForAWS
     #destination: /home/ec2-user/aspnetcoreapp
     destination: c:\inetpub\wwwroot
+    file_exists_behavior: OVERWRITE
   - #source: scripts/virtualhost.conf
     #destination: /home/ec2-user/aspnetcoreapp
     #destination: /inetpub/wwwroot
