--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -2,9 +2,9 @@ version: 0.0
 os: windows
 files:
   - source: \
-    destination: C:\inetpub\wwwroot
+    destination: C:\Websites\CoreApplication
     file_exists_behavior: OVERWRITE
-  - #source: scripts/virtualhost.conf
+  #- #source: scripts/virtualhost.conf
     #destination: /home/ec2-user/aspnetcoreapp
     #destination: /inetpub/wwwroot
 #hooks:
