added overwrite feature

--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -3,6 +3,7 @@ os: windows
 files:
   - source: \build_output\CoreApplicationForAWS
     destination: C:\Websites\CoreApplication
+    overwrite: merge
     #file_exists_behavior: OVERWRITE
   #- #source: scripts/virtualhost.conf
     #destination: /home/ec2-user/aspnetcoreapp
