added conditioanl and loop

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,4 @@
 version: 0.2
-env:
-  variables:
-    changed_folders=$(git diff --dirstat=files,0 HEAD~1 | awk '{print $2}' | xargs -I {} dirname {} | awk -F '/' '{print $1}' | sort | uniq)
 phases:
   install:
     runtime-versions:
@@ -12,14 +9,19 @@ phases:
   build:
     commands:
       - dotnet build CoreApplicationForAWS/CoreApplicationForAWS.csproj
-      - changed_folders=$(git diff --dirstat=files0 HEAD~1 | awk 'print $2' | xargs -I  dirname  | awk -F '/' 'print $1' | sort | uniq)
-      - echo $changed_folders
+     
   post_build:
     commands:
       #- dotnet publish -c Release -o ./app/ CoreApplicationForAWS/CoreApplicationForAWS.csproj
        - dotnet publish -c release -o ./build_output/CoreApplicationForAWS
 artifacts:
   files:
-     
+     - folders="/build_output/CoreApplicationForAWS"
+     - for value in $(folders);
+       do
+       if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then
+          $value
+       fi
+       done
      - scripts/**/*
      - AppSpec.yml
