--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,13 +16,14 @@ phases:
        - dotnet publish -c release -o ./build_output/CoreApplicationForAWS
 artifacts:
   files:
-     - folders="/"
-     - for value in $(folders);
-       do
-        echo $value;
-        if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then
-          $value
-        fi
-       done
+     - build_output/**/*
+     #- folders="/"
+     #- for value in $(folders);
+     #  do
+     #   echo $value;
+     #   if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then
+     #     $value
+     #   fi
+     #  done
      - scripts/**/*
      - AppSpec.yml
