--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,14 +17,14 @@ phases:
 artifacts:
   files:
    #  - build_output/**/*
-     #- folders="/"
-     #- for value in $(folders);
-     #  do
-     #   echo $value;
-     #   if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then
-     #     $value
-     #   fi
-     #  done
+     - folders="/"
+     - for value in $(folders);
+       do
+        echo $value;
+        if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then
+          $value
+        fi
+       done
      # test comment
    #  - scripts/**/*
      - AppSpec.yml
