--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,13 +18,13 @@ artifacts:
   files:
    #  - build_output/**/*
      #- folders="/"
-     #for dir in build_output/CoreApplicationForAWS/*; do echo "$dir"; if [ -f "$dir"/web.config ]; then "$dir"; fi; done
+     - for dir in build_output/CoreApplicationForAWS/*; do echo "$dir"; if [ -f "$dir"/web.config ]; then "$dir"; fi; done
      #- for value in $(folders);do echo $value;if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then $value; fi;done
      # test comment
    #  - scripts/**/*
      - AppSpec.yml
    #  - !*.config
-   name: $(AWS_REGION)-$(date +%Y-%m-%d) 
+  name: Sougat-$(date +%Y-%m-%d) 
  # path: |
   #  build_output/**/*
    # scripts/**/*
