--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -4,6 +4,8 @@ files:
   - source: \build_output\CoreApplicationForAWS
     destination: C:\Websites\CoreApplication
     overwrite: merge
+    except:
+      - \build_output\CoreApplicationForAWS\web.config
     #file_exists_behavior: OVERWRITE
   #- #source: scripts/virtualhost.conf
     #destination: /home/ec2-user/aspnetcoreapp
