--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,12 +16,12 @@ phases:
        - dotnet publish -c release -o ./build_output/CoreApplicationForAWS
 artifacts:
   files:
-   #  - build_output/**/*
+     - build_output/**/*
      #- folders="/"
-     - for dir in build_output/CoreApplicationForAWS/*; do echo "$dir"; if [ -f "$dir"/web.config ]; then "$dir"; fi; done
+     #- for dir in build_output/CoreApplicationForAWS/*; do echo "$dir"; if [ -f "$dir"/web.config ]; then "$dir"; fi; done
      #- for value in $(folders);do echo $value;if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then $value; fi;done
      # test comment
-   #  - scripts/**/*
+     - scripts/**/*
      - AppSpec.yml
    #  - !*.config
   name: Sougat-$(date +%Y-%m-%d) 
