--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,18 +22,18 @@ phases:
      
 artifacts:
   files:
-   #  - build_output/**/*
+     - build_output/**/*
      #- folders="/"
      #- for dir in build_output/CoreApplicationForAWS/*; do echo "$dir"; if [ -f "$dir"/web.config ]; then "$dir"; fi; done
      #- for value in $(folders);do echo $value;if [$value !="/build_output/CoreApplicationForAWS/web.config"]; then $value; fi;done
      # test comment
-    # - scripts/**/*
+     - scripts/**/*
      - AppSpec.yml
    #  - !*.config
   #name: Sougat-$(date +%Y-%m-%d) 
-  paths: 
-    - build_output/**/*
-    - scripts/**/*
+  #paths: 
+   # - build_output/**/*
+   # - scripts/**/*
   exclude:
     - build_output/CoreApplicationForAWS/web.config
     - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
