--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,9 @@ phases:
       #  - "*.config"
      
 artifacts:
+  exclude:
+    - build_output/CoreApplicationForAWS/web.config
+    - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
   files:
      - build_output/**/*
      #- folders="/"
@@ -29,12 +32,11 @@ artifacts:
      # test comment
      - scripts/**/*
      - AppSpec.yml
+     - buildspec.yml
    #  - !*.config
   #name: Sougat-$(date +%Y-%m-%d) 
   #paths: 
    # - build_output/**/*
    # - scripts/**/*
-  exclude:
-    - build_output/CoreApplicationForAWS/web.config
-    - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
+  
   #  !build_output/*/*.config
