--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,6 +24,9 @@ artifacts:
   exclude:
     - build_output/CoreApplicationForAWS/web.config
     - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
+  except:
+    - build_output/CoreApplicationForAWS/web.config
+    - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
   files:
      - build_output/**/*
      #- folders="/"
