--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -5,7 +5,7 @@ files:
     destination: C:\Websites\CoreApplication
     overwrite: merge
     exclude:
-      - "**/**/*.config"
+      - /build_output/CoreApplicationForAWS/web.config
 #permissions:
  # - object: /build_output/CoreApplicationForAWS/*.json
 #    owner: windows
