--- a/buildspec.yml
+++ b/buildspec.yml
@@ -45,7 +45,7 @@ artifacts:
   exclude:
    # - build_output/CoreApplicationForAWS/web.config
    # - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
-    - CoreApplicationForAWS/wwwroot/**
+    - wwwroot/**
  # except:
    # - build_output/CoreApplicationForAWS/web.config
   #  - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
