--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -4,8 +4,8 @@ files:
   - source: \build_output\CoreApplicationForAWS
     destination: C:\Websites\CoreApplication
     overwrite: merge
-    exclude_files:
-      - \build_output\CoreApplicationForAWS\web.config
+    exclude:
+      - C:\Websites\CoreApplication\web.config
 #permissions:
  # - object: /build_output/CoreApplicationForAWS/*.json
 #    owner: windows
