--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -5,7 +5,7 @@ files:
     destination: C:\Websites\CoreApplication
     overwrite: merge
     exclude:
-      - C:\Websites\CoreApplication\web.config
+      - \build_output\CoreApplicationForAWS
 #permissions:
  # - object: /build_output/CoreApplicationForAWS/*.json
 #    owner: windows
