--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -4,7 +4,8 @@ files:
   - source: \build_output\CoreApplicationForAWS
     destination: C:\Websites\CoreApplication
     overwrite: merge
-    exclude: \build_output\CoreApplicationForAWS\*
+exclude: 
+  - \build_output\CoreApplicationForAWS\*
 #permissions:
  # - object: /build_output/CoreApplicationForAWS/*.json
 #    owner: windows
