--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,10 +42,10 @@ artifacts:
    # - build_output/CoreApplicationForAWS/web.config
     #- build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
    # - CoreApplicationForAWS/CoreApplicationForAWS/appsettings.json
-  exclude-paths: **/wwwroot/**/*
+  exclude-paths: #**/wwwroot/**/*
    # - build_output/CoreApplicationForAWS/web.config
    # - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
-   # - **/wwwroot/**/*
+    - **/wwwroot/**/*
  # except:
    # - build_output/CoreApplicationForAWS/web.config
   #  - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
