--- a/buildspec.yml
+++ b/buildspec.yml
@@ -48,7 +48,7 @@ artifacts:
     - "**/*.json"
    # - "**/wwwroot/**/*"
     - "**/*.config"
-  discard-paths: yes
+  discard-paths: no
  # except:
    # - build_output/CoreApplicationForAWS/web.config
   #  - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
