--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -16,16 +16,16 @@ exclude:
   #- #source: scripts/virtualhost.conf
     #destination: /home/ec2-user/aspnetcoreapp
     #destination: /inetpub/wwwroot
-#hooks:
+hooks:
  # ApplicationStop:
     #- location: scripts/stop_service
      # timeout: 300
      # runas: root
 
- # BeforeInstall:
-    #- location: scripts/remove_application
-     # timeout: 300
-     # runas: root
+  BeforeInstall:
+    - location: scripts/BeforeInstall
+      timeout: 500
+      runas: root
 
  # AfterInstall:
     #- location: scripts/install_dotnetcore
