--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -25,7 +25,7 @@ hooks:
   BeforeInstall:
     - location: scripts/BeforeInstall.sh
       timeout: 500
-      runas: root
+     # runas: root
 
  # AfterInstall:
     #- location: scripts/install_dotnetcore
