--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -27,9 +27,9 @@ hooks:
       timeout: 500
      # runas: root
 
- # AfterInstall:
-    #- location: scripts/install_dotnetcore
-     # timeout: 500
+  AfterInstall:
+    - location: scripts/RestoreConfigFiles.bat
+      timeout: 500
      # runas: root
 
     #- location: scripts/install_httpd
