--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -22,14 +22,14 @@ hooks:
      # timeout: 300
      # runas: root
 
-  BeforeInstall:
-    - location: scripts/takebackup.bat
-      timeout: 500
+ # BeforeInstall:
+ #   - location: scripts/takebackup.bat
+  #    timeout: 500
      # runas: root
 
-  AfterInstall:
-    - location: scripts/RestoreConfigFiles.bat
-      timeout: 500
+ # AfterInstall:
+ #   - location: scripts/RestoreConfigFiles.bat
+ #     timeout: 500
      # runas: root
 
     #- location: scripts/install_httpd
