--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,12 +42,12 @@ artifacts:
    # - build_output/CoreApplicationForAWS/web.config
     #- build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
    # - CoreApplicationForAWS/CoreApplicationForAWS/appsettings.json
-  exclude-paths: #"**/wwwroot/**/*"
+#  exclude-paths: #"**/wwwroot/**/*"
    # - build_output/CoreApplicationForAWS/web.config
    # - build_output/CoreApplicationForAWS/CoreApplicationForAWS.pdb
-    - "**/*.json"
+ #   - "**/*.json"
    # - "**/wwwroot/**/*"
-    - "**/*.config"
+#    - "**/*.config"
   discard-paths: no
  # except:
    # - build_output/CoreApplicationForAWS/web.config
