--- a/scripts/BeforeInstall/BeforeInstall.exe.config
+++ b/scripts/BeforeInstall/BeforeInstall.exe.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="SourceDirectory" value="D:\Pro Sougat\Working Folder\CoreApplicationForAWS" />
-    <add key="DestinationDirectory" value="D:\TestCopy\" />
-    <add key="ConfigBackUpDirectory" value="D:\TestCopy\ConfigBackup" />
+    <add key="SourceDirectory" value="C:\Websites\CoreApplication" />
+    <add key="DestinationDirectory" value="C:\Website backup\Application Backup\" />
+    <add key="ConfigBackUpDirectory" value="C:\Website backup\Config Backup" />
   </appSettings>
 </configuration>
